# dweeb

./: Cargo.toml  config.toml  shell.nix
nix/: sources.json
src/: config.rs  dweeb_ui.rs  main.rs  wayland.rs
src/ui/: app.rs  key.rs  mod.rs  row.rs
