[package]
name = "dweeb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
gtk = { version = "0.6", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "0.0.3"
relm4 = "0.6.2"
relm4-components = "0.6.2"
serde = { version = "1.0.188", features = [ "derive" ] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
wayland-client = "0.31.0"
wayland-protocols-misc = { version = "0.2.0", features = ["client"] }
